--- a/index.html
+++ b/index.html
@@ -1,33 +1,22 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
-  </head>
-  <body>
-    <div class="container">
-      <!-- Two-line title -->
-      <h1>
-        Lab Equipment <br>
-        Management System
-      </h1>
+<head>
+  <title>MathChamp Login</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>MathChamp Login</h1>
 
-      <!-- Input fields -->
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
 
-      <!-- Admin button below email -->
-      <button id="admin-button">Admin</button>
+    <button id="login-button">Login</button>
 
-      <!-- Login and Register buttons side by side -->
-      <div class="button-group">
-        <button id="login-button">Login</button>
-        <button id="registration-button">Register</button>
-      </div>
+    <p id="login-status"></p>
+  </div>
 
-      <p id="login-status"></p>
-    </div>
-
-    <script src="firebase.js" type="module"></script>
-    <script src="Userlogin.js" type="module"></script>
-  </body>
+  <script src="firebase.js" type="module"></script>
+  <script src="Userlogin.js" type="module"></script>
+</body>
 </html>
