--- a/home.html
+++ b/home.html
@@ -1,27 +1,63 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>MathChamp Leaderboard</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MathChamp - Leaderboard</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f8f9fa;
+    }
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      text-align: center;
+      color: #333;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+    table th, table td {
+      border: 1px solid #ddd;
+      text-align: center;
+      padding: 10px;
+    }
+    table th {
+      background: #007bff;
+      color: #fff;
+    }
+    table tr:nth-child(even) {
+      background: #f2f2f2;
+    }
+  </style>
 </head>
 <body>
-
-  <h1>MathChamp Leaderboard</h1>
-
-  <table id="leaderboard">
-    <thead>
-      <tr>
-        <th>Rank</th>
-        <th>Name</th>
-        <th>Mark</th>
-      </tr>
-    </thead>
-    <tbody>
+  <div class="container">
+    <h1>Leaderboard</h1>
+    <table>
+      <thead>
+        <tr>
+          <th>Rank</th>
+          <th>Name</th>
+          <th>Mark</th>
+        </tr>
+      </thead>
+      <tbody id="leaderboard">
+        <!-- Data will be injected here -->
       </tbody>
-  </table>
-
-  <script src="firebase.js" type="module"></script>
-  <script src="homepage.js" type="module"></script>
-
+    </table>
+  </div>
+  <script type="module" src="homepage.js"></script>
 </body>
 </html>
