--- a/index.html
+++ b/index.html
@@ -46,4 +46,19 @@
       cursor: pointer;
     }
     .login-container button:hover {
-      backgro
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <div class="login-container">
+    <h1>MathChamp Login</h1>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+  </div>
+  <script type="module" src="login.js"></script>
+</body>
+</html>
