--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
       border: 1px solid #ddd;
       border-radius: 4px;
       font-size: 16px;
+      box-sizing: border-box;
     }
     .login-container button {
       width: 100%;
@@ -44,6 +45,7 @@
       border-radius: 4px;
       font-size: 16px;
       cursor: pointer;
+      box-sizing: border-box;
     }
     .login-container button:hover {
       background: #0056b3;
