--- a/login.html
+++ b/login.html
@@ -12,30 +12,36 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: #f9f9f9;
+      background: linear-gradient(to right, #007bff, #6a11cb);
     }
     .login-container {
       background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      width: 300px;
+      padding: 25px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
       box-sizing: border-box;
       text-align: center;
     }
     .login-container h1 {
-      font-size: 24px;
-      color: #333;
+      font-size: 28px;
       margin-bottom: 20px;
+      color: #333;
     }
     .login-container input {
       width: 100%;
       padding: 12px;
-      margin-bottom: 15px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
       font-size: 16px;
       box-sizing: border-box;
+    }
+    .login-container input:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
     }
     .login-container button {
       width: 100%;
@@ -43,7 +49,7 @@
       background: #007bff;
       color: #fff;
       border: none;
-      border-radius: 4px;
+      border-radius: 5px;
       font-size: 16px;
       cursor: pointer;
       box-sizing: border-box;
@@ -52,10 +58,21 @@
     .login-container button:hover {
       background: #0056b3;
     }
+    .error-message {
+      margin-top: 15px;
+      color: red;
+      font-size: 14px;
+    }
     /* Responsive design */
     @media (max-width: 480px) {
       .login-container {
-        width: 90%;
+        padding: 20px 15px;
+      }
+      .login-container h1 {
+        font-size: 24px;
+      }
+      .login-container input, .login-container button {
+        font-size: 14px;
       }
     }
   </style>
@@ -67,6 +84,7 @@
       <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
       <button type="submit">Login</button>
+      <div class="error-message" id="errorMessage"></div>
     </form>
   </div>
   <script type="module" src="login.js"></script>
