--- a/homepage.html
+++ b/homepage.html
@@ -3,61 +3,95 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MathChamp - Leaderboard</title>
+  <title>MathChamp - Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       margin: 0;
-      padding: 0;
-      background: #f8f9fa;
+      background: linear-gradient(to right, #007bff, #6a11cb);
     }
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
+    .login-container {
       background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
+      padding: 25px 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      width: 100%;
+      max-width: 400px;
+      box-sizing: border-box;
       text-align: center;
+    }
+    .login-container h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
       color: #333;
     }
-    table {
+    .login-container input {
       width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 16px;
+      box-sizing: border-box;
     }
-    table th, table td {
-      border: 1px solid #ddd;
-      text-align: center;
-      padding: 10px;
+    .login-container input:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
     }
-    table th {
+    .login-container button {
+      width: 100%;
+      padding: 12px;
       background: #007bff;
       color: #fff;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      box-sizing: border-box;
+      transition: background-color 0.3s ease;
     }
-    table tr:nth-child(even) {
-      background: #f2f2f2;
+    .login-container button:hover {
+      background: #0056b3;
+    }
+    .error-message {
+      margin-top: 15px;
+      color: red;
+      font-size: 14px;
+    }
+    @media (max-width: 480px) {
+      .login-container {
+        padding: 20px 15px;
+      }
+      .login-container h1 {
+        font-size: 24px;
+      }
+      .login-container input, .login-container button {
+        font-size: 14px;
+      }
     }
   </style>
+
+  <!-- Firebase App and Auth -->
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js"></script>
+  <script type="module" src="../js/firebase.js"></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Leaderboard</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Rank</th>
-          <th>Name</th>
-          <th>Mark</th>
-        </tr>
-      </thead>
-      <tbody id="leaderboard">
-        <!-- Data will be injected here -->
-      </tbody>
-    </table>
+  <div class="login-container">
+    <h1>MathChamp Login</h1>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+      <div class="error-message" id="errorMessage"></div>
+    </form>
   </div>
-  <script type="module" src="homepage.js"></script>
+
+  <script type="module" src="../js/login.js"></script>
 </body>
 </html>
