--- a/index.html
+++ b/index.html
@@ -14,77 +14,115 @@
       margin: 0;
       background: linear-gradient(to right, #007bff, #6a11cb);
     }
-    .login-container {
+    .box {
+      position: relative;
       background: #fff;
-      padding: 25px 20px;
+      padding: 40px 30px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      width: 100%;
-      max-width: 400px;
-      box-sizing: border-box;
       text-align: center;
+      max-width: 400px;
+      width: 100%;
     }
-    .login-container h1 {
+    .box h2 {
       font-size: 28px;
-      margin-bottom: 20px;
       color: #333;
+      margin-bottom: 20px;
     }
-    .login-container input {
+    .inputBox {
+      position: relative;
+      margin-bottom: 30px;
+    }
+    .inputBox input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
+      padding: 10px 10px 10px 5px;
       font-size: 16px;
-      box-sizing: border-box;
-    }
-    .login-container input:focus {
-      outline: none;
-      border-color: #007bff;
-      box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
-    }
-    .login-container button {
-      width: 100%;
-      padding: 12px;
-      background: #007bff;
-      color: #fff;
       border: none;
-      border-radius: 5px;
+      border-bottom: 2px solid #ccc;
+      outline: none;
+      background: transparent;
+    }
+    .inputBox span {
+      position: absolute;
+      left: 5px;
+      top: 10px;
+      padding: 0;
       font-size: 16px;
-      cursor: pointer;
-      box-sizing: border-box;
-      transition: background-color 0.3s ease;
+      color: #666;
+      transition: 0.3s;
     }
-    .login-container button:hover {
-      background: #0056b3;
+    .inputBox input:focus ~ span,
+    .inputBox input:valid ~ span {
+      top: -18px;
+      left: 5px;
+      font-size: 12px;
+      color: #007bff;
     }
-    .error-message {
-      margin-top: 15px;
-      color: red;
+    .inputBox i {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background: #007bff;
+      border-radius: 4px;
+      transition: 0.3s;
+      transform: scaleX(0);
+      transform-origin: right;
+    }
+    .inputBox input:focus ~ i {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+    .links {
+      margin: 10px 0 20px;
+      display: flex;
+      justify-content: space-between;
       font-size: 14px;
     }
-    /* Responsive design */
-    @media (max-width: 480px) {
-      .login-container {
-        padding: 20px 15px;
-      }
-      .login-container h1 {
-        font-size: 24px;
-      }
-      .login-container input, .login-container button {
-        font-size: 14px;
-      }
+    .links a {
+      color: #007bff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    .links a:hover {
+      color: #0056b3;
+    }
+    .box input[type="submit"] {
+      width: 100%;
+      background: #007bff;
+      border: none;
+      padding: 12px;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .box input[type="submit"]:hover {
+      background: #0056b3;
     }
   </style>
 </head>
 <body>
-  <div class="login-container">
-    <h1>MathChamp Login</h1>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <div class="error-message" id="errorMessage"></div>
+  <div class="box">
+    <form id="loginForm" autocomplete="off">
+      <h2>MathChamp Login</h2>
+      <div class="inputBox">
+        <input type="email" id="email" required>
+        <span>Email</span>
+        <i></i>
+      </div>
+      <div class="inputBox">
+        <input type="password" id="password" required>
+        <span>Password</span>
+        <i></i>
+      </div>
+      <div class="links">
+        <a href="#">Forgot Password?</a>
+        <a href="#">Signup</a>
+      </div>
+      <input type="submit" value="Login">
     </form>
   </div>
   <script type="module" src="login.js"></script>
