--- a/password.html
+++ b/password.html
@@ -1,1 +1,108 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Reset Password - MathChamp</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background: linear-gradient(to right, #6a11cb, #007bff);
+    }
+    .box {
+      position: relative;
+      background: #fff;
+      padding: 40px 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      text-align: center;
+      max-width: 400px;
+      width: 100%;
+    }
+    .box h2 {
+      font-size: 28px;
+      color: #333;
+      margin-bottom: 20px;
+    }
+    .inputBox {
+      position: relative;
+      margin-bottom: 30px;
+    }
+    .inputBox input {
+      width: 100%;
+      padding: 10px 10px 10px 5px;
+      font-size: 16px;
+      border: none;
+      border-bottom: 2px solid #ccc;
+      outline: none;
+      background: transparent;
+    }
+    .inputBox span {
+      position: absolute;
+      left: 5px;
+      top: 10px;
+      padding: 0;
+      font-size: 16px;
+      color: #666;
+      transition: 0.3s;
+    }
+    .inputBox input:focus ~ span,
+    .inputBox input:valid ~ span {
+      top: -18px;
+      left: 5px;
+      font-size: 12px;
+      color: #007bff;
+    }
+    .inputBox i {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      background: #007bff;
+      border-radius: 4px;
+      transition: 0.3s;
+      transform: scaleX(0);
+      transform-origin: right;
+    }
+    .inputBox input:focus ~ i {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+    .box input[type="submit"] {
+      width: 100%;
+      background: #007bff;
+      border: none;
+      padding: 12px;
+      color: #fff;
+      font-size: 16px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .box input[type="submit"]:hover {
+      background: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <div class="box">
+    <form id="passwordResetForm" autocomplete="off">
+      <h2>Reset Password</h2>
+      <div class="inputBox">
+        <input type="email" id="resetEmail" required>
+        <span>Email</span>
+        <i></i>
+      </div>
+      <input type="submit" value="Send Reset Link">
+    </form>
+  </div>
+  <script type="module" src="password.js"></script>
+</body>
+</html>
 
