--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <i></i>
       </div>
       <div class="links">
-        <a href="#">Forgot Password?</a>
+        <a href="password.html">Forgot Password?</a>
         <a href="#">Signup</a>
       </div>
       <input type="submit" value="Login">
