--- a/password.html
+++ b/password.html
@@ -95,7 +95,8 @@
     <form id="passwordResetForm" autocomplete="off">
       <h2>Reset Password</h2>
       <div class="inputBox">
-        <input type="email" id="resetEmail" required>
+        <label for="resetEmail">Email</label>
+        <input type="email" id="resetEmail" placeholder="Enter your email" required>
         <span>Email</span>
         <i></i>
       </div>
@@ -105,4 +106,3 @@
   <script type="module" src="password.js"></script>
 </body>
 </html>
-
