--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MathChamp - Login</title>
+  <title>Class Selection - MathChamp</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -12,86 +12,62 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(to right, #007bff, #6a11cb);
+      background: linear-gradient(to right, #ff7e5f, #feb47b);
     }
-    .login-container {
+    .box {
       background: #fff;
-      padding: 25px 20px;
+      padding: 40px 30px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      width: 100%;
-      max-width: 400px;
-      box-sizing: border-box;
       text-align: center;
+      max-width: 400px;
+      width: 100%;
     }
-    .login-container h1 {
+    .box h2 {
       font-size: 28px;
-      margin-bottom: 20px;
       color: #333;
+      margin-bottom: 20px;
     }
-    .login-container input {
-      width: 100%;
-      padding: 12px;
+    .class-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .class-list li {
       margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-size: 16px;
-      box-sizing: border-box;
     }
-    .login-container input:focus {
-      outline: none;
-      border-color: #007bff;
-      box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
-    }
-    .login-container button {
+    .class-list button {
       width: 100%;
-      padding: 12px;
-      background: #007bff;
-      color: #fff;
+      padding: 10px;
+      font-size: 16px;
       border: none;
       border-radius: 5px;
-      font-size: 16px;
       cursor: pointer;
-      box-sizing: border-box;
-      transition: background-color 0.3s ease;
+      background: #007bff;
+      color: #fff;
+      transition: background 0.3s;
     }
-    .login-container button:hover {
+    .class-list button:hover {
       background: #0056b3;
     }
-    .error-message {
-      margin-top: 15px;
-      color: red;
-      font-size: 14px;
-    }
-    @media (max-width: 480px) {
-      .login-container {
-        padding: 20px 15px;
-      }
-      .login-container h1 {
-        font-size: 24px;
-      }
-      .login-container input, .login-container button {
-        font-size: 14px;
-      }
-    }
   </style>
-
-  <!-- Firebase App and Auth -->
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js"></script>
-  <script type="module" src="../js/firebase.js"></script>
 </head>
 <body>
-  <div class="login-container">
-    <h1>MathChamp Login</h1>
-    <form id="loginForm">
-      <input type="email" id="email" placeholder="Email" required>
-      <input type="password" id="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <div class="error-message" id="errorMessage"></div>
-    </form>
+  <div class="box">
+    <h2>Select Your Class</h2>
+    <ul class="class-list">
+      <li><button data-class="1A">Class 1A</button></li>
+      <li><button data-class="1B">Class 1B</button></li>
+      <li><button data-class="2A">Class 2A</button></li>
+      <li><button data-class="2B">Class 2B</button></li>
+      <li><button data-class="3A">Class 3A</button></li>
+      <li><button data-class="3B">Class 3B</button></li>
+      <li><button data-class="4A">Class 4A</button></li>
+      <li><button data-class="4B">Class 4B</button></li>
+      <li><button data-class="5A">Class 5A</button></li>
+      <li><button data-class="5B">Class 5B</button></li>
+    </ul>
   </div>
-
-  <script type="module" src="../js/login.js"></script>
+  <script type="module" src="homepage.js"></script>
 </body>
 </html>
