--- a/homepage.html
+++ b/homepage.html
@@ -56,16 +56,14 @@
   <div class="box">
     <h2>Select Your Class</h2>
     <ul class="class-list">
-      <li><button data-class="1A">Class 1A</button></li>
-      <li><button data-class="1B">Class 1B</button></li>
       <li><button data-class="2A">Class 2A</button></li>
       <li><button data-class="2B">Class 2B</button></li>
+      <li><button data-class="2C">Class 2C</button></li>
+      <li><button data-class="2D">Class 2D</button></li>
       <li><button data-class="3A">Class 3A</button></li>
       <li><button data-class="3B">Class 3B</button></li>
-      <li><button data-class="4A">Class 4A</button></li>
-      <li><button data-class="4B">Class 4B</button></li>
-      <li><button data-class="5A">Class 5A</button></li>
-      <li><button data-class="5B">Class 5B</button></li>
+      <li><button data-class="3C">Class 3C</button></li>
+      <li><button data-class="3D">Class 3D</button></li>
     </ul>
   </div>
   <script type="module" src="homepage.js"></script>
