--- a/leaderboard.html
+++ b/leaderboard.html
@@ -19,7 +19,7 @@
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      max-width: 600px;
+      max-width: 800px;
       width: 100%;
       text-align: center;
     }
@@ -71,6 +71,8 @@
         <tr>
           <th>Rank</th>
           <th>Student Name</th>
+          <th>Student ID</th>
+          <th>Date</th>
           <th>Correct Rate (%)</th>
         </tr>
       </thead>
