--- a/leaderboard.html
+++ b/leaderboard.html
@@ -47,6 +47,20 @@
     tr:nth-child(even) {
       background-color: #f2f2f2;
     }
+    #backButton {
+      margin-top: 20px;
+      padding: 10px 20px;
+      background: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    #backButton:hover {
+      background: #0056b3;
+    }
   </style>
 </head>
 <body>
@@ -66,6 +80,7 @@
         <!-- Data will be dynamically inserted -->
       </tbody>
     </table>
+    <button id="backButton">Back to Class Selection</button>
   </div>
   <script type="module" src="leaderboard.js"></script>
 </body>
