--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(to right, #007bff, #6a11cb), 
-                  url('https://img.freepik.com/free-photo/blackboard-inscribed-with-scientific-formulas-calculations_1150-19413.jpg?t=st=1736427580~exp=1736431180~hmac=782a6362413e3f18663a257be26f3c8038c54dbaff6e0192fd0b5735193a5ce1&w=996') no-repeat center center/cover;
+      background: linear-gradient(to right, #007bff, #6a11cb);
     }
     .box {
       position: relative;
@@ -121,6 +120,7 @@
       </div>
       <div class="links">
         <a href="password.html">Forgot Password?</a>
+      
       </div>
       <input type="submit" value="Login">
     </form>
