--- a/index.html
+++ b/index.html
@@ -3,128 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MathChamp - Login</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: linear-gradient(to right, #007bff, #6a11cb);
-    }
-    .box {
-      position: relative;
-      background: #fff;
-      padding: 40px 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      max-width: 400px;
-      width: 100%;
-    }
-    .box h2 {
-      font-size: 28px;
-      color: #333;
-      margin-bottom: 20px;
-    }
-    .inputBox {
-      position: relative;
-      margin-bottom: 30px;
-    }
-    .inputBox input {
-      width: 100%;
-      padding: 10px 10px 10px 5px;
-      font-size: 16px;
-      border: none;
-      border-bottom: 2px solid #ccc;
-      outline: none;
-      background: transparent;
-    }
-    .inputBox span {
-      position: absolute;
-      left: 5px;
-      top: 10px;
-      padding: 0;
-      font-size: 16px;
-      color: #666;
-      transition: 0.3s;
-    }
-    .inputBox input:focus ~ span,
-    .inputBox input:valid ~ span {
-      top: -18px;
-      left: 5px;
-      font-size: 12px;
-      color: #007bff;
-    }
-    .inputBox i {
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 100%;
-      height: 2px;
-      background: #007bff;
-      border-radius: 4px;
-      transition: 0.3s;
-      transform: scaleX(0);
-      transform-origin: right;
-    }
-    .inputBox input:focus ~ i {
-      transform: scaleX(1);
-      transform-origin: left;
-    }
-    .links {
-      margin: 10px 0 20px;
-      display: flex;
-      justify-content: space-between;
-      font-size: 14px;
-    }
-    .links a {
-      color: #007bff;
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-    .links a:hover {
-      color: #0056b3;
-    }
-    .box input[type="submit"] {
-      width: 100%;
-      background: #007bff;
-      border: none;
-      padding: 12px;
-      color: #fff;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .box input[type="submit"]:hover {
-      background: #0056b3;
-    }
-  </style>
+  <title>Login - MathChamp</title>
+  <script type="module" src="login.js"></script>
 </head>
 <body>
-  <div class="box">
-    <form id="loginForm" autocomplete="off">
-      <h2>MathChamp Login</h2>
-      <div class="inputBox">
-        <input type="email" id="email" required>
-        <span>Email</span>
-        <i></i>
-      </div>
-      <div class="inputBox">
-        <input type="password" id="password" required>
-        <span>Password</span>
-        <i></i>
-      </div>
-      <div class="links">
-        <a href="password.html">Forgot Password?</a>
-        
-      </div>
-      <input type="submit" value="Login">
-    </form>
-  </div>
-  <script type="module" src="login.js"></script>
+  <form id="loginForm">
+    <h1>Login</h1>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+    <p><a href="password.html">Forgot Password?</a></p>
+  </form>
 </body>
 </html>
