--- a/index.html
+++ b/index.html
@@ -1,88 +1,60 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - MathChamp</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background: linear-gradient(to right, #007bff, #6a11cb);
+import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-auth.js";
+import firebaseConfig from './firebase.js'; // Import your Firebase config
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+console.log("Firebase app initialized:", app.name);
+const auth = getAuth(app);
+
+// Hardcoded users
+const hardcodedUsers = {
+    "lowyingjie@primary.mathchamp.my": "123456",
+    "haikal@primary.mathchamp.my": "789012",
+    "zahir@primary.mathchamp.my": "345678",
+    "faiq@primary.mathchamp.my": "901234",
+    "drsuhana@primary.mathchamp.my": "567890"
+};
+
+const loginForm = document.getElementById('loginForm');
+
+loginForm.addEventListener('submit', (e) => {
+    e.preventDefault(); // Prevent page refresh
+
+    const email = document.getElementById('email').value.trim();
+    const password = document.getElementById('password').value.trim();
+
+    if (!email || !password) {
+        alert("Please fill in both email and password fields.");
+        return;
     }
-    .box {
-      background: #fff;
-      padding: 40px 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      max-width: 400px;
-      width: 100%;
+
+    // Check for hardcoded credentials
+    if (hardcodedUsers[email] && hardcodedUsers[email] === password) {
+        console.log("User logged in with hardcoded credentials:", email);
+        alert(Login successful for ${email});
+        window.location.href = "homepage.html"; // Redirect
+        return;
     }
-    .box h2 {
-      font-size: 28px;
-      color: #333;
-      margin-bottom: 20px;
-    }
-    .inputBox {
-      position: relative;
-      margin-bottom: 20px;
-    }
-    .inputBox input {
-      width: 100%;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      outline: none;
-    }
-    .box button {
-      width: 100%;
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 16px;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    .box button:hover {
-      background: #0056b3;
-    }
-    .links {
-      margin-top: 15px;
-      font-size: 14px;
-    }
-    .links a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    .links a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <div class="box">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <div class="inputBox">
-        <input type="email" id="email" placeholder="Email" required>
-      </div>
-      <div class="inputBox">
-        <input type="password" id="password" placeholder="Password" required>
-      </div>
-      <button type="submit">Login</button>
-      <div class="links">
-        <a href="password.html">Forgot Password?</a>
-      </div>
-    </form>
-  </div>
-  <script type="module" src="login.js"></script>
-</body>
-</html>
+
+    // Proceed with Firebase Authentication for other users
+    signInWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+            console.log("User logged in with Firebase credentials:", userCredential.user);
+            alert("Login successful!");
+            window.location.href = "homepage.html"; // Redirect
+        })
+        .catch((error) => {
+            const errorCode = error.code;
+            const errorMessage = error.message;
+            console.error("Login Error:", errorCode, errorMessage);
+
+            if (errorCode === 'auth/user-not-found') {
+                alert("No user found with this email.");
+            } else if (errorCode === 'auth/wrong-password') {
+                alert("Incorrect password.");
+            } else {
+                alert("Login Failed. Please try again.");
+            }
+        });
+}); 
